  19 Apr 2014; Manuel Rüger <mrueg@gentoo.org> gratr19-0.4.4.1_p20130805.ebuild:
  [dev-ruby/gratr19] Add ruby20, ruby21 support. 6 tests fail for all rubies.

*gratr19-0.4.4.1_p20130805 (19 Apr 2014)

  19 Apr 2014; Manuel Rüger <mrueg@gentoo.org>
  +gratr19-0.4.4.1_p20130805.ebuild, +metadata.xml:
  [dev-ruby/gratr19] Initial version.